--- a/TrinhTest/Log4net.config
+++ b/TrinhTest/Log4net.config
@@ -19,7 +19,38 @@
 			<conversionPattern value="%date{dd-MM-yyyy HH:mm:ss} %5level %message  %newline" />
 		</layout>
 	</appender>
-  <!-- To customize the asp.net core module uncomment and edit the following section. 
+	<appender name="AdoNetAppenderOrg" type="MicroKnights.Logging.AdoNetAppender, MicroKnights.Log4NetAdoNetAppender">
+		<bufferSize value="1" />
+		<connectionType value="Microsoft.Data.SqlClient.SqlConnection, Microsoft.Data.SqlClient, Version=1.14.21068.1, Culture=neutral, PublicKeyToken=23ec7fc2d6eaa4a5"/>
+		<connectionStringName value="log4net" />
+		<connectionStringFile value="appsettings.json" />
+		<commandText value="INSERT INTO [dbo].[LogExeSql] ([OperationDate],[UserID],[RunSQL]) VALUES (@operationDate, @UserID, @runSQL)" />
+		<commandType value="Text"/>
+		<parameter>
+			<parameterName value="@operationDate" />
+			<dbType value="DateTime" />
+			<layout type="log4net.Layout.RawTimeStampLayout">
+				<conversionPattern value="%property{OperationDate}" />
+			</layout>
+		</parameter>
+		<parameter>
+			<parameterName value="@UserID" />
+			<dbType value="String" />
+			<size value="5" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%property{UserID}" />
+			</layout>
+		</parameter>
+		<parameter>
+			<parameterName value="@runSQL" />
+			<dbType value="String" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%property{RunSQL}" />
+			</layout>
+		</parameter>
+	</appender>
+
+	<!-- To customize the asp.net core module uncomment and edit the following section. 
   For more info see https://go.microsoft.com/fwlink/?linkid=838655 -->
   <!--
   <system.webServer>
