--- a/TrinhTest/TrinhTest.csproj
+++ b/TrinhTest/TrinhTest.csproj
@@ -50,6 +50,7 @@
 		<ProjectReference Include="..\LibTrinh\LibTrinh.csproj" />
 	</ItemGroup>
 	<ItemGroup>
+		<Folder Include="Views\Pages\Report\Account\" />
 		<Folder Include="wwwroot\css\" />
 		<Folder Include="wwwroot\lib\bootstrap\" />
 		<Folder Include="wwwroot\lib\bootstrap\dist\js\" />
