--- a/TrinhTest/bundleconfig.json
+++ b/TrinhTest/bundleconfig.json
@@ -1,24 +1,65 @@
 ﻿// Configure bundling and minification for the project.
 // More info at https://go.microsoft.com/fwlink/?LinkId=808241
 [
-  {
-    "outputFileName": "wwwroot/css/site.min.css",
-    // An array of relative input file paths. Globbing patterns supported
-    "inputFiles": [
-      "wwwroot/css/site.css"
-    ]
-  },
-  {
-    "outputFileName": "wwwroot/js/site.min.js",
-    "inputFiles": [
-      "wwwroot/js/site.js"
-    ],
-    // Optionally specify minification options
-    "minify": {
-      "enabled": true,
-      "renameLocals": true
-    },
-    // Optinally generate .map file
-    "sourceMap": false
-  }
+  //{
+  //  "outputFileName": "css/site.css",
+  //  // An array of relative input file paths. Globbing patterns supported
+  //  "inputFiles": [
+  //    "wwwroot/css/root_element_grid.css",
+  //    "wwwroot/css/root_element_color.css",
+  //    "wwwroot/css/main.custom.css",
+  //    "wwwroot/css/text_editor.css",
+  //    "wwwroot/css/button.css",
+  //    "wwwroot/css/master1.css",
+  //    "wwwroot/Assets/css/soft-ui-dashboard.css",
+  //    "wwwroot/Assests/Error/css/style.css",
+  //    "wwwroot/Assests/dist/css/scrollbar.css",
+  //    "wwwroot/Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss",
+  //    "wwwroot/css/root_element_grid.css",
+  //    "wwwroot/css/root_element_color.css",
+  //    "wwwroot/Assests/Error/css/style.css",
+  //    "wwwroot/Assests/dist/css/scrollbar.css",
+  //    "wwwroot/css/site.css",
+  //    "wwwroot/Assests/dist/Paginationjs/paginationjs.min.css",
+  //    "wwwroot/Assests/site.min.css"
+  //  ],
+  //  "sourceMap": false
+  //}
+  ////{
+  ////  "outputFileName": "wwwroot/js/site.js",
+  ////  // An array of relative input file paths. Globbing patterns supported
+  ////  "inputFiles": [
+  ////    "wwwroot/js/Common/Common.js",
+  ////    "wwwroot/js/Common/Datetime.js",
+  ////    "wwwroot/js/Common/initialize_setting.js",
+  ////    "wwwroot/js/Common/LoadLanguages_Packege.js",
+  ////    "wwwroot/js/Common/noti_function.js",
+  ////    "wwwroot/js/Common/Popup.js",
+  ////    "wwwroot/js/Common/tablesort.js",
+  ////    "wwwroot/js/Common/preload.js",
+  ////    "wwwroot/Assets/js/plugins/datatables.js"
+  ////  ],
+  ////  "minify": {
+  ////    "enabled": false
+  ////  }
+  ////},
+  ////{
+  ////  "outputFileName": "wwwroot/js/site.min.js",
+  ////  "inputFiles": [
+  ////    "wwwroot/js/Common/countup.min.js",
+  ////    "wwwroot/js/Common/Datetime.min.js",
+  ////    "wwwroot/js/Common/noti_function.min.js",
+  ////    "wwwroot/js/Preload/basket.min.js",
+  ////    "wwwroot/js/Common/basket.min.min.js",
+  ////    "wwwroot/js/Preload/preload.min.js",
+  ////    "wwwroot/Assests/dist/Paginationjs/paginationjs.min.js",
+  ////    "wwwroot/Assets/js/plugins/chartjs.min.js",
+  ////    "wwwroot/Assests/js/ajax.min.js"
+  ////  ],
+  ////  "minify": {
+  ////    "enabled": false
+  ////  },
+  ////  // Optinally generate .map file
+  ////  "sourceMap": false
+  ////}
 ]
