--- a/TrinhTest/TrinhTest.csproj
+++ b/TrinhTest/TrinhTest.csproj
@@ -47,6 +47,7 @@
 		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
+		<PackageReference Include="WebEssentials.AspNetCore.OutputCaching" Version="1.0.38" />
 		<PackageReference Include="WebMarkupMin.AspNetCore6" Version="2.13.9" />
 	</ItemGroup>
 
