--- a/TrinhTest/TrinhTest.csproj
+++ b/TrinhTest/TrinhTest.csproj
@@ -2,97 +2,62 @@
 
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<Nullable>enable</Nullable>
-		<ImplicitUsings>enable</ImplicitUsings>
 		<RazorCompileOnBuild>false</RazorCompileOnBuild>
-		<RazorCompileOnPublish>false</RazorCompileOnPublish>
-		<ProduceReferenceAssembly>true</ProduceReferenceAssembly>
-		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+    <RazorCompileOnPublish>true</RazorCompileOnPublish>
+    <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+    <EnableDefaultContentItems>false</EnableDefaultContentItems>
 		<StaticWebAssetBasePath Condition="$(StaticWebAssetBasePath) == ''">/cl</StaticWebAssetBasePath>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Content Remove="wwwroot\css\nucleo-icons.css" />
-		<Content Remove="wwwroot\css\nucleo-svg.css" />
-		<Content Remove="wwwroot\css\soft-ui-dashboard.css" />
-		<Content Remove="wwwroot\css\soft-ui-dashboard.css.map" />
-		<Content Remove="wwwroot\css\soft-ui-dashboard.min.css" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Include="wwwroot\css\nucleo-icons.css" />
-		<None Include="wwwroot\css\nucleo-svg.css" />
-		<None Include="wwwroot\css\soft-ui-dashboard.css" />
-		<None Include="wwwroot\css\soft-ui-dashboard.css.map" />
-		<None Include="wwwroot\css\soft-ui-dashboard.min.css" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="AspNetCoreRateLimit" Version="4.0.2" />
-		<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
-		<PackageReference Include="BundlerMinifier.Core" Version="3.2.449" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
-		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
-		<PackageReference Include="WebEssentials.AspNetCore.OutputCaching" Version="1.0.38" />
-		<PackageReference Include="WebMarkupMin.AspNetCore6" Version="2.13.9" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <Compile Remove="Pages\**" />
+    <Compile Remove="wwwroot\Assests\**" />
+    <Compile Remove="wwwroot\Assets\**" />
+    <Content Remove="wwwroot\Assests\**" />
+    <Content Remove="wwwroot\Assets\**" />
+    <EmbeddedResource Remove="Pages\**" />
+    <EmbeddedResource Remove="wwwroot\Assests\**" />
+    <EmbeddedResource Remove="wwwroot\Assets\**" />
+    <None Remove="Pages\**" />
+    <None Remove="wwwroot\Assests\**" />
+    <None Remove="wwwroot\Assets\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AspNetCoreRateLimit" Version="4.0.2" />
+    <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+    <PackageReference Include="BundlerMinifier.Core" Version="3.2.449" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="6.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.0" />
+    <PackageReference Include="WebEssentials.AspNetCore.OutputCaching" Version="1.0.38" />
+    <PackageReference Include="WebMarkupMin.AspNetCore6" Version="2.13.9" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwroot\Assests\**" />
+    <Folder Include="wwwroot\Assets\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="bundleconfig.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="bundleconfig.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bundleconfig.json" />
+  </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\LibTrinh\LibTrinh.csproj" />
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="Views\Pages\Chat\**" />
-		<Folder Include="Views\Pages\Dash\**" />
-		<Folder Include="Views\Pages\Login\**" />
-		<Folder Include="Views\Pages\Products**" />
-		<Folder Include="Views\Pages\Report\**" />
-		<Folder Include="Views\Pages\Setting\**" />
-		<Folder Include="Views\Pages\PriceServices\**" />
-		<Folder Include="wwwroot\lib\bootstrap\**" />
-		<Folder Include="wwwroot\lib\bootstrap\dist\js\**" />
-		<Folder Include="wwwroot\lib\jquery\**" />
-		<Folder Include="wwwroot\lib\jquery\dist\**" />
-	</ItemGroup>
-	<ItemGroup>
-		<None Include="bundleconfig.json" />
-	</ItemGroup>
-	<ItemGroup>
-		<Content Remove="bundleconfig.json" />
-		<Content Remove="Pages\Chat\ChatBots.cshtml" />
-		<Content Remove="Pages\Dash\Dash_Master.cshtml" />
-		<Content Remove="Pages\Dash\EditMater.cshtml" />
-		<Content Remove="Pages\Error\Error404.cshtml" />
-		<Content Remove="Pages\Error\Error500.cshtml" />
-		<Content Remove="Pages\Login\ChangePassword.cshtml" />
-		<Content Remove="Pages\Login\Login.cshtml" />
-		<Content Remove="Pages\Login\SignIn.cshtml" />
-		<Content Remove="Pages\Login\TextLoginGoogle.cshtml" />
-		<Content Remove="Pages\Login\User.cshtml" />
-	</ItemGroup>
-	<ItemGroup>
-		<None Include="Pages\Chat\ChatBots.cshtml" />
-		<None Include="Pages\Dash\Dash_Master.cshtml" />
-		<None Include="Pages\Dash\EditMater.cshtml" />
-		<None Include="Pages\Error\Error404.cshtml" />
-		<None Include="Pages\Error\Error500.cshtml" />
-		<None Include="Pages\Login\ChangePassword.cshtml" />
-		<None Include="Pages\Login\Login.cshtml" />
-		<None Include="Pages\Login\SignIn.cshtml" />
-		<None Include="Pages\Login\TextLoginGoogle.cshtml" />
-		<None Include="Pages\Login\User.cshtml" />
 	</ItemGroup>
 </Project>
