--- a/TrinhTest/bundleconfig.json
+++ b/TrinhTest/bundleconfig.json
@@ -1,30 +1,24 @@
 ﻿// Configure bundling and minification for the project.
 // More info at https://go.microsoft.com/fwlink/?LinkId=808241
 [
-  //{
-  //  "outputFileName": "css/site.css",
-  //  // An array of relative input file paths. Globbing patterns supported
-  //  "inputFiles": [
-  //    "wwwroot/css/root_element_grid.css",
-  //    "wwwroot/css/root_element_color.css",
-  //    "wwwroot/css/main.custom.css",
-  //    "wwwroot/css/text_editor.css",
-  //    "wwwroot/css/button.css",
-  //    "wwwroot/css/master1.css",
-  //    "wwwroot/Assets/css/soft-ui-dashboard.css",
-  //    "wwwroot/Assests/Error/css/style.css",
-  //    "wwwroot/Assests/dist/css/scrollbar.css",
-  //    "wwwroot/Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss",
-  //    "wwwroot/css/root_element_grid.css",
-  //    "wwwroot/css/root_element_color.css",
-  //    "wwwroot/Assests/Error/css/style.css",
-  //    "wwwroot/Assests/dist/css/scrollbar.css",
-  //    "wwwroot/css/site.css",
-  //    "wwwroot/Assests/dist/Paginationjs/paginationjs.min.css",
-  //    "wwwroot/Assests/site.min.css"
-  //  ],
-  //  "sourceMap": false
-  //}
+  {
+    "outputFileName": "wwwroot/css/site.css",
+    // An array of relative input file paths. Globbing patterns supported
+    "inputFiles": [
+      "wwwroot/css/root_element_grid.css",
+      "wwwroot/css/root_element_color.css",
+      "wwwroot/css/main.custom.css",
+      "wwwroot/css/text_editor.css",
+      "wwwroot/css/button.css",
+      "wwwroot/css/master1.css",
+      "wwwroot/Assets/css/soft-ui-dashboard.css",
+      //"wwwroot/Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss",
+      "wwwroot/Assests/Error/css/style.css",
+      "wwwroot/Assests/dist/css/scrollbar.css",
+      "wwwroot/Assests/dist/Paginationjs/paginationjs.min.css"
+    ],
+    "sourceMap": false
+  }
   ////{
   ////  "outputFileName": "wwwroot/js/site.js",
   ////  // An array of relative input file paths. Globbing patterns supported
