--- a/TrinhTest/appsettings.json
+++ b/TrinhTest/appsettings.json
@@ -17,7 +17,9 @@
   "JWT": {
     "SecretKey": "kzw27123!@H28FXSKHT67d492b256x7",
     "Key": "TRINH020546C8DD599B522E695D4F2",
-    "Issuer": "TRINH028DD599B520"
+    "Issuer": "localhost:1111",
+    "Audience": "localhost:5000",
+    "ExpirationInMinutes": 60
   },
   "DATA": {
     "KEYCODE": "H28FXSKHT6768L9CAWGS",
