--- a/TrinhTest/appsettings.json
+++ b/TrinhTest/appsettings.json
@@ -71,6 +71,10 @@
     "Port": 587,
     "UseSSL": true
   },
+  "elasticsearch": {
+    "index": "miniblog",
+    "url": "http://localhost:9200/"
+  },
   "Authentication": {
     "Google": "https://localhost:7126/signin-google",
     "ClientID": "35503573231-sphrsn731ur1d0b3hq9bi5ee7q7g715b.apps.googleusercontent.com",
