--- a/TrinhTest/appsettings.json
+++ b/TrinhTest/appsettings.json
@@ -23,8 +23,8 @@
   },
   "DATA": {
     "KEYCODE": "H28FXSKHT6768L9CAWGS",
-    "ROOTCODE": "TRINH020546C8DFTECHVTD59TECHVT9B522E695D4F2"
-
+    "ROOTCODE": "TRINH020546C8DFTECHVTD59TECHVT9B522E695D4F2",
+    "NAME": "TrinhO2O"
   },
   "IsProductEnviroment": true,
   "IpRateLimiting": {
