--- a/TrinhTest/web.config
+++ b/TrinhTest/web.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<system.webServer>
+		 <security>
+        <requestFiltering>
+          <requestLimits maxAllowedContentLength="2147483648" />
+        </requestFiltering>
+      </security>
 		<httpProtocol>
 			<customHeaders>
 				<add name="Access-Control-Allow-Origin" value="*" />
@@ -9,6 +14,9 @@
 			</customHeaders>
 		</httpProtocol>
 	</system.webServer>
+	<system.serviceModel>
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
+	</system.serviceModel>
 	<defaultProxy enabled="false" >
 	</defaultProxy>
 </configuration>
