--- a/LibTrinh/LibTrinh.csproj
+++ b/LibTrinh/LibTrinh.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.16" />
 		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.0" />
 		<PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+		<PackageReference Include="StackExchange.Redis" Version="2.6.116" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
 		<PackageReference Include="System.Drawing.Common" Version="7.0.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
