--- a/TrinhTest/web.config
+++ b/TrinhTest/web.config
@@ -13,10 +13,17 @@
 				<add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
 			</customHeaders>
 		</httpProtocol>
+		<handlers>
+			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+		</handlers>
+		<aspNetCore processPath="dotnet" arguments=".\TrinhTest.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
 	</system.webServer>
-	<system.serviceModel>
-		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
-	</system.serviceModel>
-	<defaultProxy enabled="false" >
-	</defaultProxy>
+	<system.webServer>
+		<httpErrors errorMode="Custom">
+			<remove statusCode="401" subStatusCode="-1" />
+			<error statusCode="401" prefixLanguageFilePath="" path="\Error\Error401" responseMode="File" />
+			<remove statusCode="500" subStatusCode="-1" />
+			<error statusCode="500" prefixLanguageFilePath="" path="\Error\Error500" responseMode="File" />
+		</httpErrors>
+	</system.webServer>
 </configuration>
