--- a/TrinhTest/web.config
+++ b/TrinhTest/web.config
@@ -1,11 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<system.webServer>
-		 <security>
-        <requestFiltering>
-          <requestLimits maxAllowedContentLength="2147483648" />
-        </requestFiltering>
-      </security>
+		<security>
+			<requestFiltering>
+				<requestLimits maxAllowedContentLength="2147483648" />
+			</requestFiltering>
+		</security>
+		 <directoryBrowse enabled="true" />
+		<!--<caching>
+			 <profiles>
+                <add extension=".js" policy="CacheForTimePeriod" kernelCachePolicy="CacheForTimePeriod" duration="14:00:00:00" />
+				<add extension=".css" policy="CacheForTimePeriod" kernelCachePolicy="CacheForTimePeriod" duration="14:00:00:00" />
+            </profiles>
+		</caching>-->
 		<httpProtocol>
 			<customHeaders>
 				<add name="Access-Control-Allow-Origin" value="*" />
@@ -21,9 +28,11 @@
 	<system.webServer>
 		<httpErrors errorMode="Custom">
 			<remove statusCode="401" subStatusCode="-1" />
-			<error statusCode="401" prefixLanguageFilePath="" path="\Error\Error401" responseMode="File" />
+			<error statusCode="401" prefixLanguageFilePath="" path="\Error\Error401" responseMode="ExecuteURL" />
 			<remove statusCode="500" subStatusCode="-1" />
-			<error statusCode="500" prefixLanguageFilePath="" path="\Error\Error500" responseMode="File" />
+			<error statusCode="500" prefixLanguageFilePath="" path="\Error\Error500" responseMode="ExecuteURL" />
+			<remove statusCode="403" subStatusCode="-1" />
+			<error statusCode="403" prefixLanguageFilePath="" path="\Error\Error401" responseMode="ExecuteURL" />
 		</httpErrors>
 	</system.webServer>
 </configuration>
