--- a/TrinhTest/bundleconfig.json
+++ b/TrinhTest/bundleconfig.json
@@ -11,11 +11,27 @@
       "wwwroot/css/text_editor.css",
       "wwwroot/css/button.css",
       "wwwroot/css/master1.css",
-      "wwwroot/Assets/css/soft-ui-dashboard.css",
+      "wwwroot/css/soft-ui-dashboard.css",
       //"wwwroot/Assets/scss/soft-ui-dashboard/plugins/pro/_datatable-extend.scss",
       "wwwroot/Assests/Error/css/style.css",
       "wwwroot/Assests/dist/css/scrollbar.css",
       "wwwroot/Assests/dist/Paginationjs/paginationjs.min.css"
+    ],
+    "sourceMap": false
+  },
+  {
+    "outputFileName": "wwwroot/css/site.min.css",
+    // An array of relative input file paths. Globbing patterns supported
+    "inputFiles": [
+      "wwwroot/css/site.css"
+    ],
+    "sourceMap": false
+  },
+  {
+    "outputFileName": "wwwroot/Assests/js/ajax.min.js",
+    // An array of relative input file paths. Globbing patterns supported
+    "inputFiles": [
+      "wwwroot/Assests/js/ajax.js"
     ],
     "sourceMap": false
   },
